# instruct-tts-chatterbox

./: .gitignore  INSTRUCT_TTS_CONTEXT.md  Summary_of_changes.md  Troubleshooting_Tips.md  benchmark.md  captts_sft_expresso.txt  debug_spkemb_diversity.py  eda.ipynb  example_instruction_tts.py  example_instructtts.py  mapper_fintune.sh  original_architecture.md  proposed_architecture.md  pyproject.toml  run_phase1.sh  run_phase2.sh  run_phase2_ddp.sh  shape.md  streamlit_instruction_tts.py  test_instruction_loading.py  train_mapper.py  train_mapper_ddp.py  train_mapper_slice.py
benchmark/: base_eval.py  create_test_csv.py  extract_gt_emotion_accent.py  extract_gt_tags.py  inference_resumable.py  merge_eval_results.py  run_accent.py  run_base_eval.py  run_benchmark.md  run_emotion.py  run_emotion_accent_eval.py  run_inference_resumable.sh  run_utmosv2.py  run_wer.py
scripts/: append_x_vector_cache.py  check_norm_stats.py  preprocess_cache.py  preprocess_training_cache.sh  push_to_hub.py  run_phase1_ddp.sh  run_scheduled_sampling.sh  run_scheduled_sampling_continue.sh  run_slice_training.sh  t3_finetune.sh  t3_finetune_ddp.sh  t3_finetune_ddp_2query.sh  test_instruct_inference.py  validate_cache_embeddings.py
src/: finetune_t3.py  finetune_t3_ddp.py
src/chatterbox/: tts.py
src/chatterbox/models/t3/: llama_configs.py  modeling_llama_adapter.py  t3.py
src/chatterbox/models/t3/inference/: t3_hf_backend.py
src/chatterbox/models/t3/modules/: instruction_encoder.py  instruction_mapper.py  instruction_mapper_slice.py
src/chatterbox/utils/: t3data_arguments.py
